--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "moment": "^2.30.1",
+    "router": "^1.3.8",
     "socket.io": "^4.7.5"
   }
 }
